
* docutils/utils.py:

  - Add ``get_stylesheet_list`` function.
  - Apply [ 2834836 ] print info at halt

* docutils/transforms/universal.py:

  - Raise default priority of StripClasses to exclude stripped classes from
    the ToC.

* docutils/writers/html4css1/__init__.py:

  - ``--stylesheet`` and ``--stylesheet-path`` options support a comma
    separated list of stylesheets.

* docutils/writers/newlatex2e/__init__.py:

  - Apply [ 1612821 ] Double quotes in literal text in Italian/German

* docutils/writers/latex2e/__init__.py (see also
  `<docs/user/docutils-05-compat.sty.html>`__) :

  - Add ``--embed-stylesheet`` option.
  - Apply [ 1474017 ] image vertical alignment is reversed.
  - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
  - Change: has_key for dictionaries (not Nodes) to in-operator.
  - Merge adjacent citations into one latex cite command.
  - Failsave implementation of custom roles. LaTeX compilation now ignores
    unknown classes instead of aborting with an error.
  - Support custom roles based on standard roles.
  - LaTeX packages can be used as ``--stylesheet`` arguments without
    restriction. (A style sheet is now referenced with the ``\usepackage``
    command, if it ends with ``.sty`` or has no extension.)
  - Add ``bp`` to lenghts without unit (prevents LaTex errors).
  - Correctly write length unit ``pt`` as ``bp`` in LaTeX.
  - Do not convert ``px`` to ``pt`` (``px`` is supported by pdfTeX since
    2005-02-04 as a configurable length unit).
  - Do not use fontenc, nor the obsolete 'ae' and 'aeguill' packages
    if font-encoding is set to ''. LaTeX defaults to OT1 then.
  - Set sub- and superscript role argument in text mode not as math.
    Use a custom role based on sub-/superscript if you want italic shape.
  - Shorter preamble and less dependencies: Load packages and define macros
    only if required in the document.
  - Use the name prefix ``DU`` for all Docutils specific LaTeX macros.