@@ -99,7 +99,7 @@ with IE!</p>
 </li>
 <li>Themes<p class="handout">A variety of themes are available.</p>
 </li>
-<li><tt class="docutils literal"><span class="pre">rst2s5.py</span></tt><p class="handout">The front-end tool to generate S5 slide shows.</p>
+<li><tt class="docutils literal">rst2s5.py</tt><p class="handout">The front-end tool to generate S5 slide shows.</p>
 </li>
 </ul>
 </div>
@@ -135,7 +135,7 @@ with IE!</p>
 <h1>Checklist</h1>
 <ul class="simple">
 <li>The document title should be duplicated on each slide in the footer
-(except for the first slide, <tt class="docutils literal"><span class="pre">slide0</span></tt>, where the entire footer is
+(except for the first slide, <tt class="docutils literal">slide0</tt>, where the entire footer is
 disabled).</li>
 <li>The footer also contains a second line, &quot;Location • Date&quot;</li>
 <li>There's no table of contents on the first slide, although it does
